--- a/src/main/resources/hibernate-mysql.properties
+++ b/src/main/resources/hibernate-mysql.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class = org.gjt.mm.mysql.Driver
 hibernate.connection.url = jdbc:mysql://localhost:3306/sto
 hibernate.connection.username = root
-hibernate.connection.password = Da951321793dA
+hibernate.connection.password = root
 hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
